<resources>
    <string name="app_name">Pods Companion</string>
    <string name="app_by">Pods Companion by Domi04151309\nBased on <a href="https://github.com/adolfintel/OpenPods">OpenPods</a> by Federico Dossena</string>

    <string name="service_text">Pods Companion is running in the background</string>
    <string name="service_channel">Service channel</string>

    <string name="status_text">Left: %1$s, Case: %2$s, Right: %3$s</string>
    <string name="status_channel">Status channel</string>

    <string name="status_widget">Status Widget</string>

    <string name="setup_title">Check your headphone\'s battery on your phone</string>
    <string name="setup_summary">To do that this app needs some permissions. Just grant them after you have clicked continue.</string>
    <string name="setup_button">Continue</string>

    <string name="loading">Loading</string>
    <string name="str_left">Left</string>
    <string name="str_case">Case</string>
    <string name="str_right">Right</string>
    <string name="unknown_status">Disconnected</string>
    <string name="unknown_status_short">\?</string>
    <string name="battery_percentage">%1$d\%%</string>

    <string name="prefs">Settings</string>
    <string name="pref_in_ear_detection">In-ear detection</string>
    <string name="pref_in_ear_detection_summary">Play audio when in and pause audio when out automatically</string>
    <string name="pref_show_pop_up">Show pop-up</string>
    <string name="pref_show_pop_up_summary">Show a pop-up with the battery status after your headphones are connected</string>
    <string name="pref_show_notification">Show notification</string>
    <string name="pref_show_notification_summary">Show a notification with the battery status when your headphones are connected</string>
    <string name="pref_notification_style">Notification style</string>
    <string name="pref_notification_style_summary">Choose a notification style</string>
    <string name="pref_theme">Change theme</string>
    <string name="pref_theme_summary">Changes the look of the app</string>

    <string-array name="pref_notification_style_array">
        <item>Rich notification</item>
        <item>Rich notification without icons</item>
        <item>Text notification</item>
    </string-array>
    <string-array name="pref_notification_style_array_values" translatable="false">
        <item>rich</item>
        <item>rich_without</item>
        <item>text</item>
    </string-array>
    <string-array name="pref_theme_array">
        <item>Light theme</item>
        <item>Dark theme</item>
        <item>Black theme</item>
        <item>Follow system theme</item>
    </string-array>
    <string-array name="pref_theme_array_values" translatable="false">
        <item>light</item>
        <item>dark</item>
        <item>black</item>
        <item>auto</item>
    </string-array>

    <string name="about">About</string>
    <string name="about_summary">About the app</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_github">There may be newer versions available on <a href="https://github.com/Domi04151309/PodsCompanion">GitHub</a>. This app is and always will be free software. Do not pay for this app.</string>
    <string name="about_license">This app is distributed under the terms and conditions of the <a href="https://github.com/Domi04151309/PodsCompanion/blob/master/LICENSE">GNU General Public License v3.0</a></string>
    <string name="about_damage">I am not responsible for any damage to your device.</string>
    <string name="about_icons">Icons by <a href="https://icons8.com/">Icons8</a> and <a href="https://material.io/resources/icons/">Google</a>.</string>
</resources>