<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/notification_padding"
            android:contentDescription="@string/str_left"
            android:src="@drawable/ic_circle_pod" />

        <TextView
            android:id="@+id/txt_left"
            style="@style/NotificationBig"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/unknown_status_short" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/notification_padding"
            android:contentDescription="@string/str_case"
            android:src="@drawable/ic_circle_case" />

        <TextView
            android:id="@+id/txt_case"
            style="@style/NotificationBig"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/unknown_status_short" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/notification_padding"
            android:contentDescription="@string/str_right"
            android:scaleX="-1"
            android:src="@drawable/ic_circle_pod" />

        <TextView
            android:id="@+id/txt_right"
            style="@style/NotificationBig"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/unknown_status_short" />
    </LinearLayout>

</LinearLayout>